--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-03-11
+% \update      2017-03-19
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -182,14 +182,20 @@
    \url{http://sourceforge.net/projects/timidity/}
    2015.
 
+   \bibitem{vmpk}
+   VMPK Team.
+   \emph{Virtual MIDI Piano Keyboard}
+   \url{http://vmpk.sourceforge.net/}
+   2015.
+
    \bibitem{wootangent1}
-   Author's name.
+   The Wootangent man.
    \emph{Sequencer64 Tutorial Video, Part 1.}
    \url{http://wootangent.net/2010/10/linux-music-tutorial-seq24-part-1/}
    2010.
 
    \bibitem{wootangent2}
-   Author's name.
+   The Wootangent man.
    \emph{Sequencer64 Tutorial Video, Part 2.}
    \url{http://wootangent.net/2010/10/linux-music-tutorial-seq24-part-2/}
    2010.
